src/objects/Service_Cloud_Settings_MVN__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom settings specific to the Mavens Call Center Accelerator.</description>
    <fields>
        <fullName>Administrator_Email_MVN__c</fullName>
        <description>Email of an admin to get notified of failures when processing cases.</description>
        <label>Administrator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Closed_Status_MVN__c</fullName>
        <defaultValue>&quot;Closed&quot;</defaultValue>
        <description>Closed status used by the CaseCloserBatchMVN job to close the Interactions for which all requests and fulfillments are closed.</description>
        <label>Closed Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Record_Type_MVN__c</fullName>
        <defaultValue>&quot;Consumer_MVN&quot;</defaultValue>
        <description>Developer Name of the consumer Account record type</description>
        <inlineHelpText>Developer Name of the consumer Account record type</inlineHelpText>
        <label>Consumer Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Default_Country_MVN__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting specifies that country on the Person search should not be defaulted to the country of the agent.</description>
        <label>Do Not Default Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Record_Type_MVN__c</fullName>
        <defaultValue>&quot;Employee_MVN&quot;</defaultValue>
        <description>Person Account Record Type for employees who can be referrers.</description>
        <label>Employee Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Record_Type_MVN__c</fullName>
        <defaultValue>&quot;Professional_vod&quot;</defaultValue>
        <description>HCP Record Type used for the Person Search.</description>
        <label>HCP Record Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Anonymize_Countries_MVN__c</fullName>
        <description>List of country codes where case data must be anonymised after closing.</description>
        <label>Interaction Anonymise Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Closed_Record_Type_MVN__c</fullName>
        <defaultValue>&quot;Interaction_Closed_MVN&quot;</defaultValue>
        <description>Record Type Developer Name for a Closed Interaction</description>
        <label>Interaction Closed Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Closing_Grace_Period_MVN__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Time in hours that all requests must be closed before the Interaction is closed automatically.</description>
        <inlineHelpText>Time in hours that all requests must be closed before the Interaction is closed automatically.</inlineHelpText>
        <label>Interaction Closing Grace Period</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Create_Case_Record_Type_MVN__c</fullName>
        <defaultValue>&apos;Request_Email_Case_MVN&apos;</defaultValue>
        <description>Case record type for which an Interaction will be automatically created.  This is the case where we need an Interaction for an Email to Case Request.</description>
        <label>Interaction Create Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Create_Origin_MVN__c</fullName>
        <defaultValue>&apos;Email&apos;</defaultValue>
        <description>The origin for which an Interaction will be automatically created.  This is for Requests that originate from an email.</description>
        <label>Interaction Create Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Record_Type_MVN__c</fullName>
        <defaultValue>&apos;Interaction_MVN&apos;</defaultValue>
        <description>The record type for a Case that is an Interaction.</description>
        <label>Interaction Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Product_Type_MVN__c</fullName>
        <defaultValue>&quot;Detail&quot;</defaultValue>
        <description>The type of products that are displayed in the knowledge search.</description>
        <label>Knowledge Product Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Search_Article_Types_MVN__c</fullName>
        <defaultValue>&apos;FAQ_MVN__kav, Medical_Letter_MVN__kav&apos;</defaultValue>
        <description>Knowledge article types available to search.</description>
        <label>Knowledge Search Article Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Search_Max_Results_MVN__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Maximum number of results to return in knowledge search.</description>
        <label>Knowledge Search Max Results</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Profiles_MVN__c</fullName>
        <description>Text field to hold a comma separated list of Profiles, Groups, or Permission set names for Managers.  Use to allow Managers access others don&apos;t have in validation rules.</description>
        <label>Manager Profiles</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_Source_MVN__c</fullName>
        <defaultValue>&quot;Veeva&quot;</defaultValue>
        <description>Value for the Origin field on an Interaction Case created from a Medical Inquiry.</description>
        <label>Medical Inquiry Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_Submitted_Status_MVN__c</fullName>
        <defaultValue>&quot;Submitted_vod&quot;</defaultValue>
        <description>Submitted status for Veeva fields.</description>
        <label>Medical Inquiry Submitted Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Status_MVN__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <description>The status assigned to the Interaction when a corresponding Request or Fulfillment is reopened.</description>
        <label>Open Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Search_Default_Record_Type_MVN__c</fullName>
        <defaultValue>&quot;Professional_vod&quot;</defaultValue>
        <description>The default person search record type.</description>
        <label>Person Search Default Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Search_Record_Types_MVN__c</fullName>
        <defaultValue>&quot;Professional_vod,Consumer_MVN,Employee_MVN&quot;</defaultValue>
        <description>Comma separated list of person search record type names that can be searched on.  Will display in the order listed.</description>
        <label>Person Search Record Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Search_Default_Record_Type_MVN__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>The default record type that is selected when the phone search functionality is used by CTI.</description>
        <label>Phone Search Default Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Record_Type_MVN__c</fullName>
        <defaultValue>&apos;Request_MVN&apos;</defaultValue>
        <description>Record type for a Case that is a Request.</description>
        <label>Request Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Cloud Settings</label>
</CustomObject>